[gd_scene load_steps=47 format=3 uid="uid://b8usw0nugvljn"]

[ext_resource type="Texture2D" uid="uid://ceh0frm8f1o42" path="res://Assets/sprites/knight.png" id="1_2udup"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="1_g73xu"]
[ext_resource type="Script" path="res://Scripts/State Machine/state_machine.gd" id="3_cjwcm"]
[ext_resource type="Texture2D" uid="uid://hyg8xf2r7737" path="res://Assets/sprites/Pato/IDLE/Idle1.png" id="3_txxjs"]
[ext_resource type="Script" path="res://Scripts/State Machine/States/Player/player_idle.gd" id="4_epq36"]
[ext_resource type="Texture2D" uid="uid://bi1lrh5p66hn5" path="res://Assets/sprites/Pato/IDLE/Idle2.png" id="4_nmfsj"]
[ext_resource type="Script" path="res://Scripts/State Machine/States/Player/player_running.gd" id="5_cwntl"]
[ext_resource type="Texture2D" uid="uid://r3qiksmlcpmw" path="res://Assets/sprites/Pato/IDLE/Idle3.png" id="5_glwfm"]
[ext_resource type="Script" path="res://Scripts/State Machine/States/Player/player_jumping.gd" id="6_3b6m0"]
[ext_resource type="Texture2D" uid="uid://bped4suwp3ssp" path="res://Assets/sprites/Pato/IDLE/Idle4.png" id="6_ewu0y"]
[ext_resource type="Script" path="res://Scripts/State Machine/States/Player/player_falling.gd" id="7_dma3n"]
[ext_resource type="Texture2D" uid="uid://b1xic2qahatog" path="res://Assets/sprites/Pato/Caminar/caminar1.png" id="7_fvkwy"]
[ext_resource type="Script" path="res://Scripts/State Machine/States/Player/player_gliding.gd" id="8_cbcnf"]
[ext_resource type="Texture2D" uid="uid://cdx4n7fc8y5d1" path="res://Assets/sprites/Pato/SALTO/salto5.png" id="8_pmo62"]
[ext_resource type="Texture2D" uid="uid://b8tnq6xrumfq6" path="res://Assets/sprites/Pato/Caminar/caminar2.png" id="8_xy0tu"]
[ext_resource type="Texture2D" uid="uid://cu27743tduqvg" path="res://Assets/sprites/Pato/SALTO/salto3.png" id="9_dc2x1"]
[ext_resource type="Texture2D" uid="uid://dmpig4s7xnwij" path="res://Assets/sprites/Pato/Caminar/caminar3.png" id="9_xsqtl"]
[ext_resource type="Texture2D" uid="uid://bxbqrrjc0hm" path="res://Assets/sprites/Pato/Caminar/caminar4.png" id="10_ds4nk"]
[ext_resource type="Texture2D" uid="uid://btlyoybcptbgh" path="res://Assets/sprites/Pato/SALTO/salto4.png" id="10_mnlap"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3raph"]
atlas = ExtResource("1_2udup")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_83aln"]
atlas = ExtResource("1_2udup")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7vda"]
atlas = ExtResource("1_2udup")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rhd5"]
atlas = ExtResource("1_2udup")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fj22j"]
atlas = ExtResource("1_2udup")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1hrc"]
atlas = ExtResource("1_2udup")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ap7st"]
atlas = ExtResource("1_2udup")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxq4h"]
atlas = ExtResource("1_2udup")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_87mgq"]
atlas = ExtResource("1_2udup")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyj26"]
atlas = ExtResource("1_2udup")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqw6m"]
atlas = ExtResource("1_2udup")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4cgq"]
atlas = ExtResource("1_2udup")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q75e4"]
atlas = ExtResource("1_2udup")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_stc1e"]
atlas = ExtResource("1_2udup")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjmjx"]
atlas = ExtResource("1_2udup")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxadn"]
atlas = ExtResource("1_2udup")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcw5h"]
atlas = ExtResource("1_2udup")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5tix"]
atlas = ExtResource("1_2udup")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_71b2n"]
atlas = ExtResource("1_2udup")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v85om"]
atlas = ExtResource("1_2udup")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_unlxt"]
atlas = ExtResource("1_2udup")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cfow"]
atlas = ExtResource("1_2udup")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yrea"]
atlas = ExtResource("1_2udup")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnn1q"]
atlas = ExtResource("1_2udup")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_edn8j"]
atlas = ExtResource("1_2udup")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pvt2s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3raph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83aln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7vda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rhd5")
}],
"loop": true,
"name": &"Die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_mnlap")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fj22j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1hrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ap7st")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxq4h")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_txxjs")
}, {
"duration": 1.0,
"texture": ExtResource("4_nmfsj")
}, {
"duration": 1.0,
"texture": ExtResource("5_glwfm")
}, {
"duration": 1.0,
"texture": ExtResource("6_ewu0y")
}],
"loop": true,
"name": &"Idle2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_87mgq")
}],
"loop": true,
"name": &"Jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_pmo62")
}, {
"duration": 1.0,
"texture": ExtResource("9_dc2x1")
}],
"loop": false,
"name": &"JumpP",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyj26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqw6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4cgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q75e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stc1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjmjx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxadn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcw5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5tix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71b2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v85om")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unlxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cfow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yrea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnn1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edn8j")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_fvkwy")
}, {
"duration": 1.0,
"texture": ExtResource("8_xy0tu")
}, {
"duration": 1.0,
"texture": ExtResource("9_xsqtl")
}, {
"duration": 1.0,
"texture": ExtResource("10_ds4nk")
}],
"loop": true,
"name": &"Walk",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d3y3g"]
size = Vector2(4.091, 13)

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_layer = 2
script = ExtResource("1_g73xu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -13)
sprite_frames = SubResource("SpriteFrames_pvt2s")
animation = &"JumpP"
autoplay = "Idle"
frame = 1
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.49012e-07, -11)
scale = Vector2(1.46681, 1.65394)
shape = SubResource("RectangleShape2D_d3y3g")

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(0, -13)

[node name="Timers" type="Node" parent="."]

[node name="JumpBufferTimer" type="Timer" parent="Timers"]

[node name="CoyoteTimer" type="Timer" parent="Timers"]

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_cjwcm")
initial_state = NodePath("PlayerIdle")

[node name="PlayerIdle" type="Node" parent="StateMachine"]
script = ExtResource("4_epq36")

[node name="PlayerRunning" type="Node" parent="StateMachine"]
script = ExtResource("5_cwntl")

[node name="PlayerJumping" type="Node" parent="StateMachine"]
script = ExtResource("6_3b6m0")

[node name="PlayerFalling" type="Node" parent="StateMachine"]
script = ExtResource("7_dma3n")

[node name="PlayerGliding" type="Node" parent="StateMachine"]
script = ExtResource("8_cbcnf")

[node name="GlidingTimer" type="Timer" parent="StateMachine/PlayerGliding"]

[connection signal="timeout" from="Timers/JumpBufferTimer" to="." method="_on_jump_buffer_timer_timeout"]
[connection signal="timeout" from="Timers/CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="StateMachine/PlayerGliding/GlidingTimer" to="." method="_on_gliding_timer_timeout"]
[connection signal="timeout" from="StateMachine/PlayerGliding/GlidingTimer" to="StateMachine/PlayerGliding" method="_on_gliding_timer_timeout"]
